@@ -18,91 +18,96 @@
 
 package com.graphhopper.routing.util;
 
+import com.graphhopper.routing.weighting.custom.CustomWeighting;
 import org.junit.jupiter.api.Test;
 
-import java.util.HashMap;
+import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class CustomModelTest {
 
-    static CustomModel setValue(CustomModel model, String op, String encodedValue, double value) {
-        Map<String, Object> map = new HashMap<>();
-        map.put(op + value, 0);
-        model.getPriority().put(encodedValue, map);
-        return model;
-    }
-
-    Object getValue(CustomModel model, String encodedValue) {
-        Map map = (Map) model.getPriority().get(encodedValue);
-        if (map == null || map.isEmpty())
-            return null;
-        return map.keySet().iterator().next();
+    @Test
+    public void testTooBigFactor() {
+        CustomModel truck = new CustomModel();
+        truck.getPriority().put("max_width < 3", 10);
+        // it is ok server-side CustomModel
+        assertEquals(1, CustomModel.merge(truck, new CustomModel()).getPriority().size());
+        // but not for query CustomModel
+        assertThrows(IllegalArgumentException.class, () -> CustomModel.merge(new CustomModel(), truck));
     }
 
     @Test
     public void testMergeComparisonKeys() {
-        CustomModel truck = setValue(new CustomModel(), "<", "max_width", 3);
-        CustomModel car = setValue(new CustomModel(), "<", "max_width", 2);
-        CustomModel bike = setValue(new CustomModel(), "<", "max_weight", 0.02);
+        CustomModel truck = new CustomModel();
+        truck.getPriority().put("max_width < 3", 0);
+        CustomModel car = new CustomModel();
+        car.getPriority().put("max_width<2", 0);
+        CustomModel bike = new CustomModel();
+        bike.getPriority().put("max_weight<0.02", 0);
 
-        assertEquals("<2.0", getValue(CustomModel.merge(bike, car), "max_width"));
-        assertNull(getValue(bike, "max_width"));
-        assertNull(getValue(car, "max_weight"));
+        assertEquals(2, CustomModel.merge(bike, car).getPriority().size());
+        assertEquals(1, bike.getPriority().size());
+        assertEquals(1, car.getPriority().size());
+    }
 
-        assertEquals("<3.0", getValue(CustomModel.merge(car, truck), "max_width"));
-        Exception ex = assertThrows(IllegalArgumentException.class, () -> CustomModel.merge(truck, car));
-        assertTrue(ex.getMessage().contains("max_width: only use a comparison key with a bigger value than 3.0 but was 2.0"), ex.getMessage());
+    @Test
+    public void testFirstMatch() {
+        CustomModel truck = new CustomModel();
+        Map<String, Object> map = new LinkedHashMap<>();
+        map.put("max_width < 3", 0);
+        truck.getPriority().put(CustomWeighting.FIRST_MATCH, map);
 
-        CustomModel car2 = setValue(new CustomModel(), ">", "max_width", 2);
-        ex = assertThrows(IllegalArgumentException.class, () -> CustomModel.merge(truck, car2));
-        assertTrue(ex.getMessage().contains("max_width: comparison keys must match but did not: "), ex.getMessage());
-
-        Map<String, Object> map = new HashMap<>();
-        map.put("<2.0", 0.5);
-        CustomModel customModel = new CustomModel();
-        customModel.getPriority().put("max_width", map);
-        ex = assertThrows(IllegalArgumentException.class, () -> CustomModel.merge(customModel, customModel));
-        assertTrue(ex.getMessage().contains("only blocking comparisons are allowed, but query was 0.5 and server side: 0.5"), ex.getMessage());
+        CustomModel car = new CustomModel();
+        Map<String, Object> map2 = new LinkedHashMap<>();
+        map2.put("max_width < 2", 0);
+        car.getPriority().put(CustomWeighting.FIRST_MATCH, map2);
+        CustomModel merged = CustomModel.merge(truck, car);
+        assertEquals(1, merged.getPriority().size());
+        assertEquals(2, ((Map) merged.getPriority().get(CustomWeighting.FIRST_MATCH)).size());
+        assertEquals(1, CustomModel.merge(new CustomModel(), car).getPriority().size());
+        assertEquals(1, CustomModel.merge(car, new CustomModel()).getPriority().size());
     }
 
     @Test
     public void testMergeEmptyModel() {
         CustomModel emptyCar = new CustomModel();
         CustomModel car = new CustomModel();
-        car.getPriority().put("road_class", createMap("primary", 2.0, "tertiary", 1.2));
-        // empty entries means "extend base" profile, i.e. primary=1
-        Map map = (Map) CustomModel.merge(emptyCar, car).getPriority().get("road_class");
-        assertEquals(2.0, map.get("primary"));
-        assertEquals(1.2, map.get("tertiary"));
+        car.getPriority().putAll(createMap("road_class==primary", 0.5, "road_class==tertiary", 0.8));
 
-        map = (Map) CustomModel.merge(car, emptyCar).getPriority().get("road_class");
-        assertEquals(2.0, map.get("primary"));
-        assertEquals(1.2, map.get("tertiary"));
+        Iterator<Map.Entry<String, Object>> iter = CustomModel.merge(emptyCar, car).getPriority().entrySet().iterator();
+        assertEquals(0.5, iter.next().getValue());
+        assertEquals(0.8, iter.next().getValue());
+
+        iter = CustomModel.merge(car, emptyCar).getPriority().entrySet().iterator();
+        assertEquals(0.5, iter.next().getValue());
+        assertEquals(0.8, iter.next().getValue());
     }
 
     @Test
     public void testMergeMap() {
         CustomModel truck = new CustomModel();
-        truck.getPriority().put("road_class", createMap("primary", 1.5, "secondary", 2.0));
+        truck.getPriority().putAll(createMap("road_class==primary", 0.6, "road_class==secondary", 0.5));
         CustomModel car = new CustomModel();
-        car.getPriority().put("road_class", createMap("primary", 2.0, "tertiary", 1.2));
+        car.getPriority().putAll(createMap("road_class==primary", 0.5, "road_class==tertiary", 0.8));
 
-        Map map = (Map) CustomModel.merge(truck, car).getPriority().get("road_class");
-        assertEquals(1.5 * 2.0, map.get("primary"));
-        assertEquals(2.0, map.get("secondary"));
-        assertEquals(1.2, map.get("tertiary"));
+        Iterator<Map.Entry<String, Object>> iter = CustomModel.merge(truck, car).getPriority().entrySet().iterator();
+        assertEquals(0.6 * 0.5, iter.next().getValue());
+        assertEquals(0.5, iter.next().getValue());
+        assertEquals(0.8, iter.next().getValue());
 
-        // do not change argument of merge method
-        assertEquals(1.5, (Double) ((Map) truck.getPriority().get("road_class")).get("primary"), .1);
+        // do not change the truck variable - it is only an argument of the merge method
+        assertEquals(0.6, truck.getPriority().entrySet().iterator().next().getValue());
 
-        truck.getPriority().put("road_class", createMap("primary", "incompatible"));
+        truck.getPriority().putAll(createMap("road_class==primary", "incompatible"));
         assertThrows(IllegalArgumentException.class, () -> CustomModel.merge(car, truck));
     }
 
     Map createMap(Object... objects) {
-        Map map = new HashMap();
+        Map map = new LinkedHashMap();
         for (int i = 0; i < objects.length; i += 2) {
             map.put(objects[i], objects[i + 1]);
         }
