@@ -1,5 +1,6 @@
 3.0
     CustomWeighting language breaks old format but is now simpler and supports boolean expressions
+    	it now also allows factors >1 for server-side CustomModels
     default for GraphHopperMatrixWeb (client for Matrix API) is now the sync POST request without the artificial polling delay in most cases
     refactored TransportationMode to better reflect the usage in source data parsing only
     CustomWeighting requires LinkedHashMap throw exception if this is not provided
